--- a/FullPage/css/style.css
+++ b/FullPage/css/style.css
@@ -45,3 +45,112 @@ a{
 	background:#FC0; 
 	color:rgba(0,0,0,0.8);
 }
+/*第一页*/
+.s1{ background:url(../images/s1.jpg) center; overflow:hidden;}
+.s1 img{ position:absolute; top:50%; left:50%; margin-left:-545px; margin-top:-230px; opacity:0; transition:0.5s; transition-delay:0.8s;}
+.s1.active img{ opacity:1}
+/*公共部分*/
+.section{
+	height: 100%;
+	overflow: hidden;
+}
+.section .left{
+	position: absolute;
+	top: 50%;
+	left: 5%;
+	margin-top: -200px;
+	z-index: 2;
+}
+.section .left li{
+	float: left;
+	margin-left: 20px;
+	transition:0.8s;
+}
+.section .left p{
+	font-size: 18px;
+	color: #333;
+	margin: 20px 0px;
+}
+.section .left a{
+	background: url(../images/buy.jpg);
+	display: block;
+	width:98px; 
+	height:36px;
+}
+.section .right{
+	position: absolute;
+	top: 16%;
+	right: 5%;
+	z-index: 3;
+	color: #333;
+	text-align: right;
+}
+.section .right h1{
+	font-family: "微软雅黑";
+	font-size: 34px;
+	font-weight: bold;
+} 
+.section .right p{
+	font-size: 18px;
+	margin: 20px 0px 10px 0px;
+	line-height: 18px;
+}
+.section .right a{
+	color: #333;
+
+	text-decoration: none;
+}
+.section .right a:hover{
+	cursor: pointer;
+	text-decoration: underline;
+}
+.section .bg{ position:absolute; right:0; bottom:0; z-index:1}
+
+
+
+/*第二页*/
+.s2{
+	background: url(../images/s2.jpg) center;
+	overflow: hidden;
+}
+.s2 .left li{
+	-webkit-transform:translateY(1000px);
+	transform:translateY(1000px);
+}
+.s2 .left li:nth-child(1){
+	transition-delay:0.5s;
+}
+.s2 .left li:nth-child(2){
+	transition-delay:1.0s;
+}
+.s2 .left li:nth-child(3){
+	transition-delay:1.5s;
+}
+.s2.active .left li{
+	-webkit-transform:translateY(0);
+	transform:translateY(0);
+}
+/*第三页*/
+.s3{
+	background: url(../images/s3.jpg) center;
+	overflow: hidden;
+}
+.s3 .left li{
+	transition-delay:1.0s;
+}
+.s3 .left li:nth-child(1){
+	-webkit-transform:translateX(0);
+	transform:translateX(0);
+}
+.s3 .left li:nth-child(2){
+	-webkit-transform:translateX(-279px);
+	transform:translateX(-279px);
+}
+.s3 .left li:nth-child(3){
+	-webkit-transform:translateX(-558px);
+	transform:translateX(-558px);
+}
+.s3.active .left li{
+	-webkit-transform:translateX(0);
+	transform:translateX(0);
+}
